Feature/hellodata 1723 users overview (#90)
* HELLODATA-1723 - users overview init

* HELLODATA-1723 - users overview table

* HELLODATA-1723 - users overview table adjustments

* fix translating breadcrumbs

* HELLODATA-1723 - users overview table adjustments

* HELLODATA-1723 - users overview table adjustments

* HELLODATA-1723 - context name as dynamic column; show all dashboards for editors and higher roles

* HELLODATA-1723 - adjustments

* HELLODATA-1723 - primeng translations

* HELLODATA-1723 - stop logging missing keys

* HELLODATA-1723 - fix redundant headers

* HELLODATA-1723 - change column name

* HELLODATA-1723 - change title

* HELLODATA-1723 - change var name

* HELLODATA-1723 - unsubscribe

* HELLODATA-1723 - adjustments

* HELLODATA-1723 - fix lint

* HELLODATA-1723 - optimization

* HELLODATA-1723 - optimization

* HELLODATA-1723 - optimization

* HELLODATA-1723 - optimization

* HELLODATA-1723 - test update

* HELLODATA-1723 - decrease refresh interval

---------

Co-authored-by: Slawomir Wieczorek <slawomir.wieczorek@bedag.ch>